[tool.poetry]
name = "trovi"
version = "0.0.1"
description = "A collection of shared artifacts"
authors = ["Chameleon Cloud <contact@chameleoncloud.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
jsonschema = "^4.17.3"
jsonpatch = "^1.32"
cmarkgfm = "^2022.10.27"
keystoneauth1 = "^5.2.0"
python-jose = "^3.3.0"
python-keycloak-client = "^0.2.3"
drf-extensions = "^0.7.1"
PyJWT = "^2.7.0"
drf-spectacular = "^0.26.2"
giturlparse = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
Faker = "^18.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
